--- a/YenDon/Base.lproj/Main.storyboard
+++ b/YenDon/Base.lproj/Main.storyboard
@@ -22,19 +22,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="tc7-7w-B0e">
-                                <rect key="frame" x="73" y="272" width="229" height="122"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="tc7-7w-B0e">
+                                <rect key="frame" x="0.0" y="298.5" width="375" height="69"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="4K9-8g-LiP">
-                                <rect key="frame" x="50" y="231" width="127" height="68"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="4K9-8g-LiP">
+                                <rect key="frame" x="142" y="224" width="90" height="86"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.85263043642044067" green="0.14551377296447754" blue="0.1148674413561821" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="tc7-7w-B0e" firstAttribute="centerX" secondItem="qeY-5q-lZb" secondAttribute="centerX" id="1bD-IW-a7t"/>
+                            <constraint firstItem="4K9-8g-LiP" firstAttribute="centerY" secondItem="qeY-5q-lZb" secondAttribute="centerY" multiplier="0.8" id="S3K-TT-kg1"/>
+                            <constraint firstItem="tc7-7w-B0e" firstAttribute="centerY" secondItem="qeY-5q-lZb" secondAttribute="centerY" id="bba-Or-Pcm"/>
+                            <constraint firstItem="tc7-7w-B0e" firstAttribute="width" secondItem="qeY-5q-lZb" secondAttribute="width" id="gc0-ld-nkp"/>
+                            <constraint firstItem="4K9-8g-LiP" firstAttribute="centerX" secondItem="qeY-5q-lZb" secondAttribute="centerX" id="rI9-nc-DOx"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="main" id="gpm-cD-VyE"/>
+                        <outlet property="star" destination="4K9-8g-LiP" id="y7G-YO-wzt"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="main" id="gMD-qO-fPg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K9b-ce-W6A" userLabel="First Responder" sceneMemberID="firstResponder"/>
